style.css
html {
	font-size:8px;
}

body {
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.ui.basic.label {
	font-family: 'Orbitron', sans-serif;
	font-size: 4.236rem;
	width: 95%;
	text-align: right;
	margin: 5px auto;
	padding: 20px;
}

.label #chain {
	font-size: 1.618rem;
}

.ui.raised.segment {
	margin: 10px auto;
	width: 400px;
	max-width: 95%;
	background-color: #333;
}

footer {
	margin: 20px auto;
	line-height: 30px;
	width: 400px;
	max-width: 95%;
	height: auto;
	color: #333;
	font-size: 2.618rem;
}

.buttons {
	display: flex;
	margin: 5px auto;
	width: 100%;
	flex-wrap: wrap;
	justify-content: center;
}

.buttons > * {
	flex: 1 1 calc(25% - 15px);
}

.ui.button {
	margin: 5px;
	height: 60px;
	padding: 10px;
	font-size: 2.618rem;
}

/*tell it to stfu*/
.ui.button:not(.icon)>.icon:not(.button):not(.dropdown) {
	margin: 0 auto;
}

.ui.button i.arrow.left.icon {
	opacity: 1;
	margin: 0 auto;
}

#equals {
	flex-grow: 16;
}

/*
* { background-color: rgba(255,0,0,0.3);}
* * { background-color: rgba(0,255,0,0.3);}
* * * { background-color: rgba(0,0,255,0.3);}
* * * * { background-color: rgba(255,0,0,0.3);}
* * * * * { background-color: rgba(0,255,0,0.3);}
*/

@media (min-width: 400px){
	html {
		font-size: 10px;
	}
}

@media (min-width: 800px){
	html {
		font-size: 12px;
	}
}

@media (min-width: 1000px){
	html {
		font-size: 12px;
	}
}
 

